# snake-arena-live

./: .env.example  .gitignore  .renderignore  BACKEND_COMPLETE.md  BACKEND_SUMMARY.txt  CODESPACES.md  DEPLOYMENT.md  DOCKER_SETUP.md  DOCKER_VERIFICATION.md  Dockerfile.unified  FIRST_TIME_SETUP.md  FRONTEND_BACKEND_INTEGRATION.md  FULLSTACK.md  INTEGRATION.md  INTEGRATION_CHECKLIST.md  Makefile  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.unified.yml  docker-compose.yml  nginx.unified.conf  package-lock.json  package.json  rebuild-frontend.sh  render.yaml  supervisord.conf  test-unified.sh  vitest.config.ts
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  API_SPEC.md  CHECKLIST.md  Dockerfile  FILE_LISTING.md  IMPLEMENTATION.md  ONBOARDING.md  QUICKSTART.md  README.md  START_HERE.md  STATUS.md  VERIFICATION_COMPLETE.md  VERIFY_ADDED_FILES.md  VERIFY_API.md  VERIFY_IMPLEMENTATION.md  VERIFY_INDEX.md  VERIFY_QUICK_START.md  VERIFY_README.md  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  snake_arena.db  test-api.sh  verify_api.py
backend/app/: database.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  leaderboard.py  live.py
backend/tests/: __init__.py  test_api.py  test_database.py
backend/tests_integration/: README.md  __init__.py  conftest.py  test_auth_integration.py  test_leaderboard_integration.py  test_live_integration.py
docker/: README.md
frontend/: .dockerignore  .env.development  .env.example  (+7 more)
(+41 files in other folders)
